Edited index interface

--- a/TSAR/Views/Home/Index.cshtml
+++ b/TSAR/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQliKXfqwUcsGhZVbwdhZjieqJ09CE2IAlS1jEjpMlRDNeazjTe8g" class="img-responsive" alt="">
+                    <img src="https://www.businessdbbuilder.com/img/inventorymng.jpg" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Inventory Management</h4>
@@ -161,11 +161,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                @*<h4>2009-2011</h4>*@
+                                <h4 class="subheading">Business Support</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Where we are</p>
+                                <p class="text-muted">It is our goal to offer you the best solution for your businesses long-term growth and sustainability.</p>
                             </div>
                         </div>
                     </li>
@@ -175,11 +175,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                @*<h4>March 2011</h4>*@
+                                <h4 class="subheading">Selling Methodology</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Born from</p>
+                                <p class="text-muted">Our selling methodology comprises an analysis of your business thereafter recommending a solution around SYSPRO that suits your budget.</p>
                             </div>
                         </div>
                     </li>
@@ -189,11 +189,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2012</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                @*<h4>December 2012</h4>*@
+                                <h4 class="subheading">Post Sale Service</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Provide service</p>
+                                <p class="text-muted">Our post sale services include implementation, customization, training and go live support with ongoing value adding services/support.</p>
                             </div>
                         </div>
                     </li>
@@ -203,11 +203,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2014</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                @*<h4>July 2014</h4>*@
+                                <h4 class="subheading">Ad-hoc</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Type of environment</p>
+                                <p class="text-muted">Ad-hoc support and annual upgrades to maximize your investment in Annual License Fees (ALF).</p>
                             </div>
                         </div>
                     </li>
@@ -237,55 +237,57 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="~/img/team/1.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Kay Garland</h4>
-                    <p class="text-muted">Lead Designer</p>
+                    <img src="~/img/team/Ivan.jpg" class="img-responsive" alt="">
+                    <h4>Ivan Naidoo</h4>
+                    <p class="text-muted">Director </p>
                     <ul class="list-inline social-buttons">
-                        <li>
+                        @*<li>
                             <a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
+                        </li>*@
                         <li>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/TSAR-Business-Solutions-419225178110447/?fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li>
+                        @*<li>
                             <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="~/img/team/2.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Larry Parker</h4>
-                    <p class="text-muted">Lead Marketer</p>
+                    <img src="~/img/team/Anoop.jpg" class="img-responsive" alt="">
+                    <h4>Anoop Brijmohun</h4>
+                    <p class="text-muted">Manager, Software Developement</p>
                     <ul class="list-inline social-buttons">
-                        <li>
+                        @*<li>
                             <a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
+                        </li>*@
                         <li>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/TSAR-Business-Solutions-419225178110447/?fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li>
+                        @*<li>
                             <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="~/img/team/3.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Diana Pertersen</h4>
-                    <p class="text-muted">Lead Developer</p>
+                    
+                
+                    <img src="~/img/team/devashen.jpg" class="img-responsive" alt="">
+                    <h4>Devashen Govender</h4>
+                    <p class="text-muted">Business Consultant</p>
                     <ul class="list-inline social-buttons">
-                        <li>
+                        @*<li>
                             <a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
+                        </li>*@
                         <li>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/TSAR-Business-Solutions-419225178110447/?fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li>
+                        @*<li>
                             <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -300,7 +302,7 @@
 <!-- Clients Aside -->
 <aside class="clients">
     <div class="container">
-        <div class="row">
+        @*<div class="row">
             <div class="col-md-3 col-sm-6">
                 <a href="#">
                     <img src="~/img/logos/envato.jpg" class="img-responsive img-centered" alt="">
@@ -321,7 +323,7 @@
                     <img src="~/img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
                 </a>
             </div>
-        </div>
+        </div>*@
     </div>
 </aside>
 
