--- a/TSAR/Views/Shared/_Layout.cshtml
+++ b/TSAR/Views/Shared/_Layout.cshtml
@@ -195,7 +195,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Accounts payable</h2>
                                 @*<p class="item-intro text-muted"></p>*@
-                                @*<img class="img-responsive img-centered" src="~/img/portfolio/roundicons-free.png" alt="">*@
+                                <img class="img-responsive img-centered" src="http://www.emeraldtc.com/blog/wp-content/uploads/2015/10/Dollarphotoclub_91049728.jpg" alt="">
                                 <p>Accounts Payable
 SYSPRO Accounts Payable improves cash flow, while maintaining close relationships with suppliers by providing timely, accurate and efficient control of processing invoices, paying bills and analyzing expenses and available discounts. The Accounts Payable system provides an efficient method for recording purchases and supplier invoices as well as making expense distributions. It can be installed standalone or integrated with other modules in the SYSPRO system. Included are facilities for maintaining, verifying and reporting supplier account information. The module offers optional two-step invoice entry that allows users to enter, approve and then pay an invoice. Extensive audit trails and journals form an integral part of the module. Against each supplier, invoice and transaction details are retained from which cash requirements, forecasting and purchase analysis may be printed. Suppliers can be held in local or foreign currency and multi-branch accounting is available. In addition, free-format checks and remittances can be designed.
 
@@ -258,8 +258,8 @@ Produce 1099 documents</p>
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <h2>Accounts Receivable</h2>
-                                @*<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="~/img/portfolio/startup-framework-preview.png" alt="">*@
+                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <img class="img-responsive img-centered" src="https://cdn.gatewaycfs.com/business-financing/wp-content/uploads/2012/06/iStock_000004074257Small.jpg" alt="">
                                 <p>@*<a href="http://designmodo.com/startup/?u=787"*@>Accounts Receivable<@*/a>*@ SYSPRO Accounts Receivable improves cash flow management by accumulating and managing customer activity and ensuring timely revenue collection and effective reporting.
 This system enhances customer servicing by maintaining contact information, creating notes and detailing credit management information.
 The Accounts Receivable system provides users with extensive control of customer information. Analysis and reporting can be performed on an open-item or balance-forward basis using various ageing options. Information for a defined series of related customers may be accumulated into a single master account for consolidated statement printing. In addition, free-format statements and recurring invoices can be designed.
@@ -295,9 +295,9 @@ Standardisation – Standard analysis of slow-moving, excess, active and static 
 Improved Utilisation – Improved warehouse utilization and systems for the procurement and production scheduling teams.
 Improve Inventory Forecast Accuracy
 Improved forecast accuracy is essential to minimizing inventory holding and obsolescence costs, especially in forecasting environments where product ranges and configurations are extensive, bills of material are complex, and raw material and component lead times are long. </p>
-                                @*<img class="img-responsive img-centered" src="~/img/portfolio/treehouse-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQliKXfqwUcsGhZVbwdhZjieqJ09CE2IAlS1jEjpMlRDNeazjTe8g" alt="">
                                 <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>*@
+                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
