--- a/TSAR/Views/Home/Index.cshtml
+++ b/TSAR/Views/Home/Index.cshtml
@@ -277,7 +277,7 @@
                 
                     <img src="~/img/team/devashen.jpg" class="img-responsive" alt="">
                     <h4>Devashen Govender</h4>
-                    <p class="text-muted">Business Consultant</p>
+                    <p class="text-muted">Junior SYSPRO Consultant</p>
                     <ul class="list-inline social-buttons">
                         @*<li>
                             <a href="#"><i class="fa fa-twitter"></i></a>
