--- a/TSAR/Views/Shared/_Layout.cshtml
+++ b/TSAR/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                     <li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                        <a href="javascript:document.getElementById('logoutForm').submit()">Log Off</a>
+                            <a href="javascript:document.getElementById('logoutForm').submit()">Log Off</a>
                         }
                         else
                         {
@@ -78,6 +78,15 @@
                                 <li>@Html.ActionLink("Log In", "Login", "Account")</li>
                                 <li>@Html.ActionLink("Register", "Register", "Account")</li>
                             </ul>                  
+                        }
+                    </li>
+                    <li>
+                        @if (User.IsInRole("Admin"))                      
+                        {
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>@Html.ActionLink("Manager Menu", "ManagerMenu", "Manage")</li>
+                                                      
+                            </ul>
                         }
                     </li>
                 </ul>
