--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -19,7 +19,9 @@
     <li class="h2">
         @Html.ActionLink("Manage Newsletter", "Index", "Newsletter")
     </li>
+    <li class="h2">
+        @Html.ActionLink("Send Newsletter", "Index", "SendMailer")
+    </li>
 </ul>
-
 
 
