Added menu for subscribe

--- a/TSAR/Views/Shared/_Layout.cshtml
+++ b/TSAR/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        @*@Html.ActionLink("Abt", "Contact", "Home", new { @class = "page-scroll", @href = "#lolcon" }, null)*@
+                        @Html.ActionLink("Subscribe", "Create", "Newsletter")
                     </li>
                     <li>
                         @if (User.Identity.IsAuthenticated)
