--- a/TSAR/Views/Home/Index.cshtml
+++ b/TSAR/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
     
 }
 @*@Html.ActionLink("Clients", "About", "Home", new { @class = "elements" }, null)*@
+@*@Html.ActionLink("Clients", "About", "Home", new { @class = "elements" }, null)*@
 
 
     <!-- Services Section -->
