--- a/TSAR/Views/ManageTravel/Delete.cshtml
+++ b/TSAR/Views/ManageTravel/Delete.cshtml
@@ -13,14 +13,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.travelCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.travelCode)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.rate)
         </dt>
 
@@ -34,6 +26,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.distance)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TravelFee)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TravelFee)
         </dd>
 
     </dl>
