--- a/TSAR/Views/Clients/Create.cshtml
+++ b/TSAR/Views/Clients/Create.cshtml
@@ -73,9 +73,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TravelCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TravelCode, "Travel Code", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TravelCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("TravelCode", null, htmlAttributes: new { @class = "form-control", style = "text-transform:uppercase;" } )
                 @Html.ValidationMessageFor(model => model.TravelCode, "", new { @class = "text-danger" })
             </div>
         </div>
