--- a/TSAR/Views/Clients/Details.cshtml
+++ b/TSAR/Views/Clients/Details.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.ManageTravel.TravelCode)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ManageTravel.TravelCode)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ClientName)
         </dt>
 
@@ -65,14 +73,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.ProjectLeader)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TravelCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TravelCode)
         </dd>
 
         <dt>
