--- a/TSAR/Views/Clients/Index.cshtml
+++ b/TSAR/Views/Clients/Index.cshtml
@@ -6,76 +6,82 @@
 }
 
 <h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<p>
-    @using (Html.BeginForm("Index", "Clients", FormMethod.Get))
+    @using (Html.BeginForm("Index", "Client", FormMethod.Get))
     {
         <b>Search by:</b><font color="Black"> @Html.TextBox("Search")<input type="submit" value="Search" style="color: black" /></font>}
 </p>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
 <table class="table">
     <tr>
+        
         <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.ClientName)</font>
-</th>
+            <font color="white">   @Html.DisplayNameFor(model => model.ClientName)</font>
+        </th>
         <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.Branch)</font>
-</th>
+            <font color="white">    @Html.DisplayNameFor(model => model.Branch)</font>
+        </th>
         <th>
-            <font color="white"> @Html.DisplayNameFor(model => model.ClientAddress)</font>
-</th>
+            <font color="white">     @Html.DisplayNameFor(model => model.ClientAddress)</font>
+        </th>
         <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.ContactNumber)</font>
-</th>
+            <font color="white">   @Html.DisplayNameFor(model => model.ContactNumber)</font>
+        </th>
         <th>
-            <font color="white"> @Html.DisplayNameFor(model => model.Email)</font>
-</th>
+            <font color="white">    @Html.DisplayNameFor(model => model.Email)</font>
+        </th>
         <th>
-            <font color="white"> @Html.DisplayNameFor(model => model.ClientType)</font>
-</th>
+            <font color="white">    @Html.DisplayNameFor(model => model.ClientType)</font>
+        </th>
+
+
+        <th>
+            <font color="white">  @Html.DisplayNameFor(model => model.ManageTravel.TravelCode)</font>
+        </th>
+
         <th>
             <font color="white">  @Html.DisplayNameFor(model => model.ProjectLeader)</font>
-</th>
+        </th>
         <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.TravelCode)</font>
-</th>
-        <th>
-            <font color="white">  @Html.DisplayNameFor(model => model.RoleType)</font>
-</th>
+            <font color="white">   @Html.DisplayNameFor(model => model.RoleType)</font>
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+      
         <td>
-            <font color="gold">   @Html.DisplayFor(modelItem => item.ClientName)</font>
-        </td>
+            <font color="gold">  @Html.DisplayFor(modelItem => item.ClientName)</font>
+</td>
         <td>
             <font color="gold">   @Html.DisplayFor(modelItem => item.Branch)</font>
-        </td>
+</td>
         <td>
-            <font color="gold">  @Html.DisplayFor(modelItem => item.ClientAddress)</font>
-        </td>
+            <font color="gold">   @Html.DisplayFor(modelItem => item.ClientAddress)</font>
+</td>
         <td>
             <font color="gold">  @Html.DisplayFor(modelItem => item.ContactNumber)</font>
+</td>
+        <td>
+            <font color="gold">   @Html.DisplayFor(modelItem => item.Email)</font>
+</td>
+        <td>
+            <font color="gold">    @Html.DisplayFor(modelItem => item.ClientType)</font>
         </td>
         <td>
-            <font color="gold">  @Html.DisplayFor(modelItem => item.Email)</font>
+            <font color="gold" style = "text-transform:uppercase;"> @Html.DisplayFor(modelItem => item.ManageTravel.TravelCode)</font>
+
         </td>
+
         <td>
-            <font color="gold">   @Html.DisplayFor(modelItem => item.ClientType)</font>
-        </td>
+            <font color="gold"> @Html.DisplayFor(modelItem => item.ProjectLeader)</font>
+</td>
         <td>
-            <font color="gold">  @Html.DisplayFor(modelItem => item.ProjectLeader)</font>
-        </td>
-        <td>
-            <font color="gold"> @Html.DisplayFor(modelItem => item.TravelCode)</font>
-        </td>
-        <td>
-            <font color="gold">  @Html.DisplayFor(modelItem => item.RoleType)</font>
-        </td>
+            <font color="gold">     @Html.DisplayFor(modelItem => item.RoleType)</font>
+</td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
