--- a/TSAR/Views/ManageTravel/Edit.cshtml
+++ b/TSAR/Views/ManageTravel/Edit.cshtml
@@ -16,35 +16,35 @@
         <h4>ManageTravel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.tcode)
+        @Html.HiddenFor(model => model.TravelCode)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.travelCode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.travelCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.travelCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.rate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.rate, htmlAttributes: new { @class = "col-md-offset-5 col-md-2" })
+            <div class="col-md-offset-5 col-md-2">
                 @Html.EditorFor(model => model.rate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.rate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.distance, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.distance, htmlAttributes: new { @class = "col-md-offset-5 col-md-2" })
+            <div class="col-md-offset-5 col-md-2">
                 @Html.EditorFor(model => model.distance, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.distance, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            @Html.LabelFor(model => model.TravelFee, htmlAttributes: new { @class = "col-md-offset-5 col-md-2" })
+            <div class="col-md-offset-5 col-md-2">
+                @Html.EditorFor(model => model.TravelFee, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TravelFee, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div align="center">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
     </div>
