--- a/TSAR/Views/Consultants/Create.cshtml
+++ b/TSAR/Views/Consultants/Create.cshtml
@@ -43,8 +43,24 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ConsultantAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ConsultantAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConsultantAddress, "", new { @class = "text-danger" })
+                @*<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places"></script>
+                <script type="text/javascript">
+        google.maps.event.addDomListener(window, 'load', function () {
+            var places = new google.maps.places.Autocomplete(document.getElementById('ClientAddress'));
+            google.maps.event.addListener(places, 'place_changed', function () {
+                var place = places.getPlace();
+                var address = place.formatted_address;
+                var latitude = place.geometry.location.lat();
+                var longitude = place.geometry.location.lng();
+                var mesg = "Address: " + address;
+                mesg += "\nLatitude: " + latitude;
+                mesg += "\nLongitude: " + longitude;
+
+            });
+        });
+                </script>*@
+                @Html.EditorFor(model => model.ConsultantAddress, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.ConsultantAddress, "", new {@class = "text-danger"})
             </div>
         </div>
 
