--- a/TSAR/Views/Clients/Create.cshtml
+++ b/TSAR/Views/Clients/Create.cshtml
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClientAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places"></script>
+                <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places"></script>
                 <script type="text/javascript">
         google.maps.event.addDomListener(window, 'load', function () {
             var places = new google.maps.places.Autocomplete(document.getElementById('ClientAddress'));
@@ -50,7 +50,7 @@
                 
             });
         });
-                </script>*@
+                </script>
                 @Html.EditorFor(model => model.ClientAddress, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.ClientAddress, "", new {@class = "text-danger"})
             </div>
