--- a/TSAR/Views/Shared/_LayoutOther.cshtml
+++ b/TSAR/Views/Shared/_LayoutOther.cshtml
@@ -101,7 +101,7 @@
     </nav>
 <header>
     <div class="container">
-        <div class="intro-text">
+        <div class=page-header>
             <section id="consult">
                 @RenderBody()
             </section>    
